# fastapi_1

./: README.md  dockerfile
app/: README.md  pyproject.toml
app/app/project2/: books.py
app/app/project3/: main.py  testdb.db
app/app/project3/routers/: auth.py  todos.py
app/app/project4/: database.py  main.py  models.py  requeriments.txt  todoapp.db
app/app/project4/logs/: my_app.log.jsonl  my_app.log.jsonl.1  my_app.log.jsonl.2  my_app.log.jsonl.3  my_app.log.jsonl.4  my_app.log.jsonl.5  my_app.log.jsonl.6  my_app.log.jsonl.7
app/app/project4/routers/: admin.py  users.py
app/app/project4/static/todo/css/: base.css
app/app/project4/templates/: add-todo.html  edit-user-password.html  home.html  navbar.html  not_found.html
app/app/project4/test/: test_admin.py  test_auth.py  test_main.py
app/project1/: books.py
app/project3/: main.py  todo.db
app/project3/routers/: users.py
app/project3/test/: test_example.py  utils.py
app/project3/tools/: middleware.py
app/project4/: dependencies.py  main.py  schemas.py
app/project4/routers/: auth.py  todos.py
app/project4/templates/: edit-todo.html  layout.html  login.html  navbar.html  register.html
app/project4/test/: test_todos.py
app/project4/tools/: logger.py
project4/: database.py  dependencies.py
project4/alembic/: env.py
project4/logs/: my_app.log.jsonl  my_app.log.jsonl.1  my_app.log.jsonl.2  my_app.log.jsonl.3  my_app.log.jsonl.4
project4/routers/: auth.py  todos.py  users.py
project4/templates/: navbar.html
project4/test/: test_users.py
(+1 files in other folders)
